<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sorpresa">

    <TextView
        android:id="@+id/txt_saludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="35dp"
        android:text="@string/txt_welcome"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="395dp"
        android:layout_height="395dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/b1"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:onClick="ponerFicha"
                android:padding="0dp"
                android:text=""
                android:textSize="30sp"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/b2"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:onClick="ponerFicha"
                android:padding="0dp"
                android:text=""
                android:textSize="30sp"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/b3"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:onClick="ponerFicha"
                android:padding="0dp"
                android:text=""
                android:textSize="30sp"
                app:cornerRadius="0dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b4"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:onClick="ponerFicha"
                android:padding="0dp"
                android:text=""
                android:textSize="30sp"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/b5"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:onClick="ponerFicha"
                android:padding="0dp"
                android:text=""
                android:textSize="30sp"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/b6"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:onClick="ponerFicha"
                android:padding="0dp"
                android:text=""
                android:textSize="30sp"
                app:cornerRadius="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b7"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:onClick="ponerFicha"
                android:padding="0dp"
                android:text=""
                android:textSize="30sp"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/b8"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:onClick="ponerFicha"
                android:padding="0dp"
                android:text=""
                android:textSize="30sp"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/b9"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:onClick="ponerFicha"
                android:padding="0dp"
                android:text=""
                android:textSize="30sp"
                app:cornerRadius="0dp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textVictoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_win"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_saludo" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:onClick="resetGame"
        android:text="@string/btn_reset"
        android:textSize="25sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>